blocks/genai-search/genai-search.css
/* ... */
.gen-ai .genai-search .search-box-wrapper .search-button {
  font-size: 0;
  line-height: 10px;
  position: absolute;
  top: -8px;
  right: 12px;
  height: 28px;
  padding: 0 0 0 10px;
  width: auto;
  background: transparent;

  font-weight: 800;
  font-family: var(--heading-font-family);
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-left: 1px solid #a4a4a4;
}
.genai-search .search-box-wrapper .search-button svg {
  color: var(--highlight-color);
  transform: rotate(-45deg);
}

.genai-search.small
  .search-box-wrapper
  .search-input::-webkit-search-cancel-button,
.genai-search.large
  .search-box-wrapper
  .search-input::-webkit-search-cancel-button {
  display: none;
}

@media (min-width: 600px) {
  .section.genai-search-container h2 {
    width: 80%;
  }

  .genai-search .search-box-wrapper:not(.gen-ai-search-container) {
    flex-direction: row;
  }

  .genai-search .search-box-wrapper .search-input {
    height: 45px;
    max-width: 700px;
    padding-left: 30px;
    padding-right: 60px;
  }

  body.gen-ai .genai-search.large .search-box-wrapper .search-input {
    height: 63px;
  }

  .genai-search .search-box-wrapper .search-button {
    position: absolute;
    top: -12px;
    right: 25px;
    height: 42px;
    width: auto;
    margin-left: -254px;
    padding-left: 15px;
  }
  .search-box-wrapper .search-button svg {
    height: unset;
    width: unset;
    margin-bottom: 0;
  }
  .genai-search.small .search-box-wrapper .search-button,
  .genai-search.large .search-box-wrapper .search-button {
    height: 40px;
    margin-top: 20px;
  }
}

@media (min-width: 768px) {
  .section.genai-search-container h2 {
    width: initial;
  }
}
.genai-search-container .insurance-card {
  margin-bottom: 20px;
  background-color: white;
  display: grid;
  grid-template-rows: auto;
  padding: 0;
}

.genai-search-container .insurance-card .search-card-warning {
  margin-bottom: 20px !important;
  width: 100%;
}

.genai-search-container .insurance-card .cta-container {
  padding: 30px 20px;
  border-radius: 8px;
  border: 1px solid #8d8d8d;
  cursor: pointer;
  background: #fff;
}

.genai-search-container .insurance-card .cta-container h4 {
  color: #969696;
  margin-top: 0 !important;
  margin-bottom: 5px !important;
  font-family: var(--heading-font-family);
  font-size: var(--body-font-size-s);
  font-style: normal;
  font-weight: 600;
  line-height: 17px; /* 121.429% */
  letter-spacing: 1.54px;
  text-transform: uppercase;
}

.genai-search-container .insurance-card .cta-container p {
  color: #24081d;

  font-family: var(--heading-font-family);
  font-size: var(--body-font-size-m);
  font-style: normal;
  font-weight: 500;
  line-height: 26px; /* 162.5% */
}

.genai-search-container .insurance-card .cta-container:hover p {
  color: var(--color-blue);
}

.genai-search-container .search-card {
  margin-bottom: 20px;
  display: grid;
  grid-template-columns: 60% 40%;
  grid-template-rows: auto;
  padding: 0;
}

.genai-search-container .search-card .divider {
  grid-row: 2;
  grid-column: 1;
}

.genai-search-container .search-card h1::before,
.genai-search-container .search-card h2::before {
  display: none;
}

.genai-search-container .search-card h4 {
  grid-row: 3;
  grid-column: 1;
}

.genai-search-container .search-card .search-card-buttons {
  grid-row: 4;
  grid-column: 1;
  cursor: pointer;
}

@media (max-width: 600px) {
  .genai-search-container .search-card {
    grid-template-columns: 100%;
    padding-left: 0;
  }
  .genai-search-container .search-card .divider,
  .genai-search-container .search-card h4,
  .genai-search-container .search-card .search-card-buttons {
    grid-column: span 2;
    /* grid-row: auto; */
  }
  .genai-search-container .search-card .search-card-buttons {
    overflow-x: hidden;
  }
}

.genai-search-container .search-card .search-card-warning {
  display: flex;
  gap: 10px;
  align-items: flex-start;
  grid-row: 1;
  margin: 0 !important;
}

.genai-search-container .search-card-warning p {
  font-family: var(--heading-font-family);
  font-size: var(--heading-font-size-xxs);
  font-weight: 600;
  line-height: 1.0625rem;
  color: var(--color-blue-dark-alt);
  margin-top: 0;
  margin-bottom: 0;
}

.genai-search-container .search-card-buttons {
  display: flex;
  flex-wrap: wrap;
  gap: 15px;
}

.genai-search-container .search-card-button {
  background-color: #ffffff;
  border: solid 2px var(--color-purple);
  padding: 5px 16px;
  font-size: 1rem;
  margin: 0;
  text-decoration: none;
  display: inline-block;
  flex-wrap: wrap;
  border-radius: 16px;
  font-family: unset;
  font-weight: 300;
  transition: transform 0.3s ease; /* Animation for hover effect */
  color: #24081d;
  @media (max-width: 600px) {
    font-size: 0.8125rem;
    white-space: wrap;
    text-align: left;
  }
}

.search-card-button:hover,
.search-card-button:focus {
  background-color: var(--background-color);
  transform: scale(1.05); /* Zoom effect on hover */
  cursor: pointer !important;
}

.genai-search-container article a {
  color: var(--color-purple);
  text-decoration: underline;
}

.genai-search-container article ul,
article ol {
  list-style-position: unset;
}

.genai-search-container .search-card > h4 {
  margin-top: 15px !important;
  /* margin-bottom: 0px !important; */
  padding-bottom: 0px;
}

.genai-search-container .divider {
  border-bottom: 1px solid var(--color-gray); /* create a 1px solid black border at the bottom */
  padding-bottom: 0px; /* optional: add some padding at the bottom of the div */
}

.genai-search-container .search-card-container {
  display: grid;
  grid-template-columns: 60% 40%;
  grid-template-rows: auto auto auto;
  row-gap: 20px;
  grid-column: span 2;
  justify-content: center;
  align-items: flex-start;
  height: 100%;
  @media (max-width: 600px) {
    gap: 0;
  }
  @media (min-width: 900px) {
    row-gap: unset;
    justify-content: flex-start;
    min-width: 100%;
  }
}
/* ... */

